WIP: Added separate filter menu and fixed visiblity #33

--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -17,6 +17,10 @@
   text-transform: uppercase;
 }
 
+ion-select {
+  max-width: 100%;
+}
+
 .popover-content {
   width: 80% !important;
 }
